testdata/baselines/reference/submodule/compiler/modulePreserve3.errors.txt
/index.tsx(2,2): error TS2875: This JSX tag requires the module path 'react/jsx-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.


==== /node_modules/@types/react/jsx-runtime.d.ts (0 errors) ====
    export namespace JSX {}
    
==== /index.tsx (1 errors) ====
    export {};
    (<div />);
     ~~~~~~~
!!! error TS2875: This JSX tag requires the module path 'react/jsx-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.
    